# minrt

./: CMakeLists.txt  CTexture.cpp  CTexture.h  CVector2.cpp  CVector2.h  CVector2i.cpp  CVector2i.h  CVector3.cpp  CVector3.h  Camera.cpp  Camera.h  Dither.cpp  Dither.hpp  EmbreeStuff.cpp  EmbreeStuff.h  Engine.cpp  Engine.h  Etc1Fast.cpp  Etc1Fast.h  MathETC1.hpp  MinRT.common.settings  MinRT.cpp  MinRT.h  MinRT.sln  MinRT.vcxproj  MinRT.vcxproj.filters  NetworkStuff.cpp  NetworkStuff.h  OpenGLstuff.cpp  OpenGLstuff.h  ProcessCommon.hpp  ProcessRGB.cpp  ProcessRGB.hpp  RT_Camera.cpp  RT_Camera.h  RT_FrameBuffer.cpp  RT_FrameBuffer.h  RT_RayQuery.cpp  RT_RayQuery.h  RT_RayTracer.cpp  (+24 more)
doc/: minrt.docx
lib/: embree.lib  embree_noavx.lib
lib64/: embree.lib  embree_noavx.lib
